--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".RegisterClass" />
         <activity android:name=".AttendanceMiddleware" />
         <activity android:name=".StudentProfile" />
-        <activity android:name=".ParentActivity"></activity>
+        <activity android:name=".ParentActivity" />
+        <activity android:name=".StudentMain"></activity>
     </application>
 
 </manifest>
