--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".AttendanceMiddleware" />
         <activity android:name=".StudentProfile" />
         <activity android:name=".ParentActivity" />
-        <activity android:name=".StudentMain"></activity>
+        <activity android:name=".StudentMain" />
+        <activity android:name=".StudentNews"></activity>
     </application>
 
 </manifest>
