--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name=".ParentActivity" />
         <activity android:name=".StudentMain" />
         <activity android:name=".StudentNews" />
-        <activity android:name=".TeacherAddNews"></activity>
+        <activity android:name=".TeacherAddNews" />
+        <activity android:name=".HorizontalBarChartActivity"></activity>
     </application>
 
 </manifest>
